--- a/app/src/main/res/layout/game_info.xml
+++ b/app/src/main/res/layout/game_info.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pngegg__4_"
-    tools:context=".GameInfoFragment">
+    android:background="@drawable/pngegg__4_">
 
     <Button
         android:id="@+id/terranButton"
