--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="isTerran"
+            name="isItem"
             type="org.techtown.starcraft2.Starcraft2Unit" />
     </data>
     <androidx.cardview.widget.CardView
@@ -23,12 +23,6 @@
                 android:orientation="horizontal"
                 android:padding="8dp">
 
-                <ImageView
-                    android:id="@+id/unitImg"
-                    android:layout_width="140dp"
-                    android:layout_height="140dp"
-                    android:imageUrl="@{isTerran.img}"
-                    android:scaleType="centerCrop" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -43,13 +37,13 @@
                         android:layout_gravity="center"
                         android:layout_margin="10dp"
                         android:gravity="center"
-                        android:text="@{isTerran.unitName}"
+                        android:text="@{isItem.unitName}"
                         android:textColor="@color/black"
                         android:textSize="15sp"
                         android:textStyle="bold|normal" />
                     <TextView
                         android:id="@+id/info"
-                        android:text="@{isTerran.info}"
+                        android:text="@{isItem.info}"
                         android:layout_marginTop="15dp"
                         android:textSize="16sp"
                         android:gravity="start"
