--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -22,11 +22,17 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal"
                 android:padding="8dp">
+                <ImageView
+                    android:id="@+id/img"
+                    android:imageUrl="@{isItem.img}"
+                    android:scaleType="centerCrop"
+                    android:layout_width="140dp"
+                    android:layout_height="140dp"/>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical">
 
