--- a/app/src/main/res/layout/terran.xml
+++ b/app/src/main/res/layout/terran.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" >
     <data>
         <variable
@@ -20,6 +22,13 @@
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/img"
+                    android:scaleType="fitXY"
+                    android:layout_marginBottom="15dp"
+                    android:imageUrl="@{isData.img}"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp"/>
                 <View
                     android:background="@android:color/darker_gray"
                     android:layout_width="match_parent"
